# static-image-serving

./: CMakeLists.txt  README.md  default_config.yaml  todo.txt
src/: cliinput.cpp  cliinput.h  config.cpp  config.h  conversion.cpp  conversion.h  jpg.cpp  main.cpp  png.cpp  utils.cpp  utils.h  webp.cpp
